--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,210 +1,169 @@
 ---
-import astroLogo from '../assets/astro.svg';
-import background from '../assets/background.svg';
+import Logo from "./Logo.astro";
 ---
 
-<div id="container">
-	<img id="background" src={background.src} alt="" fetchpriority="high" />
-	<main>
-		<section id="hero">
-			<a href="https://astro.build"
-				><img src={astroLogo.src} width="115" height="48" alt="Astro Homepage" /></a
-			>
-			<h1>
-				To get started, open the <code><pre>src/pages</pre></code> directory in your project.
-			</h1>
-			<section id="links">
-				<a class="button" href="https://docs.astro.build">Read our docs</a>
-				<a href="https://astro.build/chat"
-					>Join our Discord <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.14 96.36"
-						><path
-							fill="currentColor"
-							d="M107.7 8.07A105.15 105.15 0 0 0 81.47 0a72.06 72.06 0 0 0-3.36 6.83 97.68 97.68 0 0 0-29.11 0A72.37 72.37 0 0 0 45.64 0a105.89 105.89 0 0 0-26.25 8.09C2.79 32.65-1.71 56.6.54 80.21a105.73 105.73 0 0 0 32.17 16.15 77.7 77.7 0 0 0 6.89-11.11 68.42 68.42 0 0 1-10.85-5.18c.91-.66 1.8-1.34 2.66-2a75.57 75.57 0 0 0 64.32 0c.87.71 1.76 1.39 2.66 2a68.68 68.68 0 0 1-10.87 5.19 77 77 0 0 0 6.89 11.1 105.25 105.25 0 0 0 32.19-16.14c2.64-27.38-4.51-51.11-18.9-72.15ZM42.45 65.69C36.18 65.69 31 60 31 53s5-12.74 11.43-12.74S54 46 53.89 53s-5.05 12.69-11.44 12.69Zm42.24 0C78.41 65.69 73.25 60 73.25 53s5-12.74 11.44-12.74S96.23 46 96.12 53s-5.04 12.69-11.43 12.69Z"
-						></path></svg
-					>
-				</a>
-			</section>
-		</section>
-	</main>
+<div id="container" class="h-full text-foreground overflow-auto">
+    <picture
+            class="hidden absolute w-full h-full top-0 left-0 sm:bottom-0 pointer-events-none sm:flex justify-center overflow-hidden">
+        <source srcset="/Comet.avif" type="image/avif"/>
+        <source srcset="/Comet.webp" type="image/webp"/>
+        <source srcset="/Comet.png" type="image/png"/>
+        <img src="/Comet.avif" alt="" class="h-[190vh] max-h-[calc(var(--spacing)*720)] -translate-y-1/3 object-cover"/>
+    </picture>
+    <main class="flex flex-col sm:items-center h-full relative max-sm:px-4 max-h-[calc(var(--spacing)*400)]">
+        <header class="py-6 sm:py-11 sm:px-20 flex items-center justify-between w-full">
+            <Logo/>
+            <div class="hidden sm:block text-foreground-soft text-2xl">Stay tuned on <a href="#"
+                                                                                        class="text-primary underline ">LinkedIn</a>
+            </div>
+        </header>
+        <div class="flex flex-col sm:items-center gap-4 max-w-[550px] sm:text-center sm:mt-[10vh]">
+            <h1 class="leading-tight text-[2rem] sm:text-5xl font-black">Your LinkedIn <br>comments CRM</h1>
+            <p class="text-xl sm:text-2xl">Turn comments into clients. Spark conversations and grow your audience
+                without posting
+                daily</p>
+        </div>
+        <div class="flex items-stretch sm:items-center gap-4 sm:gap-0 justify-center mt-4 sm:mt-10 flex-col sm:flex-row sm:py-10 sm:overflow-hidden w-full shrink-0"
+             id="cards">
+            <div class="text-xl sm:w-[268px] gap-3 flex flex-col bg-card text-foreground-inverted rounded-card p-6 sm:rotate-[11.17deg] card-shadow shrink-0">
+                <div class="text-3xl">🤡</div>
+                <div>
+                    <p class="font-bold">No more “well done!” and “good job!”</p>
+                    <p class="text-foreground-soft-inverted text-xl">You know it never worked anyway</p>
+                </div>
+            </div>
+            <div class="text-xl sm:w-[268px] gap-3 flex flex-col bg-card text-foreground-inverted rounded-card p-6 sm:rotate-[-12.56deg] card-shadow shrink-0">
+                <div class="text-3xl">😎</div>
+                <div>
+                    <p class="font-bold">Comment like a Pro</p>
+                    <p class="text-foreground-soft-inverted text-xl">With AI generator tailored to your profile</p>
+                </div>
 
-	<a href="https://astro.build/blog/astro-5/" id="news" class="box">
-		<svg width="32" height="32" fill="none" xmlns="http://www.w3.org/2000/svg"
-			><path
-				d="M24.667 12c1.333 1.414 2 3.192 2 5.334 0 4.62-4.934 5.7-7.334 12C18.444 28.567 18 27.456 18 26c0-4.642 6.667-7.053 6.667-14Zm-5.334-5.333c1.6 1.65 2.4 3.43 2.4 5.333 0 6.602-8.06 7.59-6.4 17.334C13.111 27.787 12 25.564 12 22.666c0-4.434 7.333-8 7.333-16Zm-6-5.333C15.111 3.555 16 5.556 16 7.333c0 8.333-11.333 10.962-5.333 22-3.488-.774-6-4-6-8 0-8.667 8.666-10 8.666-20Z"
-				fill="#111827"></path></svg
-		>
-		<h2>What's New in Astro 5.0?</h2>
-		<p>
-			From content layers to server islands, click to learn more about the new features and
-			improvements in Astro 5.0
-		</p>
-	</a>
+
+            </div>
+            <div class="text-xl sm:w-[268px] gap-3 flex flex-col bg-card text-foreground-inverted rounded-card p-6 sm:rotate-[9.49deg] card-shadow shrink-0">
+                <div class="text-3xl">📊</div>
+                <div>
+                    <p class="font-bold">Keep track of things</p>
+                    <p class="text-foreground-soft-inverted text-xl">
+                        Likes, replies, views – you name it
+                    </p>
+                </div>
+            </div>
+            <div class="text-xl sm:w-[268px] gap-3 flex flex-col rounded-card p-6 sm:rotate-[-12.49deg] relative shrink-0"
+                 id="last-card">
+                <div class="flex items-center justify-between text-3xl">🚀<span
+                        class="text-foreground-soft text-xl">soon</span></div>
+                <div>
+                    <p class="font-bold">Scale growth</p>
+                    <p class="text-foreground-soft text-xl">With autoposting agent that never sleeps</p>
+                </div>
+                <svg
+                        viewBox="0 0 300 233"
+                        class="absolute left-0 top-0 w-full h-full"
+                        preserveAspectRatio="none"
+                >
+                    <rect
+                            x="1"
+                            y="1"
+                            width="298"
+                            height="231"
+                            rx="20"
+                            ry="20"
+                            class="fill-none stroke-foreground-soft"
+                            stroke-width="1"
+                            stroke-dasharray="8 8"
+                            vector-effect='non-scaling-stroke'
+                    />
+                </svg>
+            </div>
+        </div>
+        <div class="sticky w-[calc(100%+var(--spacing)*8)] max-sm:mt-32 max-sm:-mx-4 sm:w-full bottom-10 sm:block sm:absolute sm:bottom-10">
+            <picture
+                    id="swap-image-1"
+                    class="block sm:hidden absolute -top-[500px] left-0 w-full h-[790px] pointer-events-none z-0 overflow-hidden">
+                <source srcset="/CometMobile.avif" type="image/avif"/>
+                <source srcset="/CometMobile.webp" type="image/webp"/>
+                <source srcset="/CometMobile.png" type="image/png"/>
+                <img src="/CometMobile.avif" alt=""
+                     class="absolute left-1/2 bottom-0 min-w-[800px] w-[170vw] aspect-auto max-w-[900px] -translate-x-1/2 translate-y-[14%]"/>
+            </picture>
+            <picture
+                    id="swap-image-2"
+                    class="block sm:hidden absolute -top-[500px] left-0 w-full h-[790px] pointer-events-none z-0 overflow-hidden">
+                <source srcset="/Comet.avif" type="image/avif"/>
+                <source srcset="/Comet.webp" type="image/webp"/>
+                <source srcset="/Comet.png" type="image/png"/>
+                <img src="/Comet.avif" alt="" class="absolute left-1/2 bottom-0 max-w-none w-[500px] -translate-x-1/2"/>
+            </picture>
+            <div class="flex flex-col items-center gap-4 max-w-[230px] text-center mx-auto relative">
+                <div class="bg-[#5362F6] absolute -inset-8 -z-1 blur-lg rounded-full"></div>
+                <div class="text-2xl font-extrabold relative">Try now</div>
+                <div class="text-xl relative">2 day trial, no credit card required</div>
+            </div>
+        </div>
+        <div class="sm:hidden text-foreground-soft text-2xl pb-10 pt-32 relative text-center">Stay tuned on <a href="#"
+                                                                                                               class="text-primary underline ">LinkedIn</a>
+        </div>
+    </main>
 </div>
 
 <style>
-	#background {
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: -1;
-		filter: blur(100px);
-	}
+    .card-shadow {
+        box-shadow: 0px 6.39px 10.02px 0px hsla(0, 0%, 0%, 0.04), 0px 15.38px 24.12px 0px hsla(0, 0%, 0%, 0.05);
+    }
 
-	#container {
-		font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
-		height: 100%;
-	}
+    #swap-image-1 {
+        transition: opacity 0.2s cubic-bezier(.95, .21, .83, .67);
+    }
 
-	main {
-		height: 100%;
-		display: flex;
-		justify-content: center;
-	}
+    #swap-image-2 {
+        transition: opacity 0.3s cubic-bezier(.19, .97, .7, .87);
+    }
 
-	#hero {
-		display: flex;
-		align-items: start;
-		flex-direction: column;
-		justify-content: center;
-		padding: 16px;
-	}
+    #swap-image-2 {
+        opacity: 0;
+    }
 
-	h1 {
-		font-size: 22px;
-		margin-top: 0.25em;
-	}
+    .is-not-visible {
+        opacity: 0 !important;
+    }
 
-	#links {
-		display: flex;
-		gap: 16px;
-	}
+    .is-visible {
+        opacity: 1 !important;
+    }
 
-	#links a {
-		display: flex;
-		align-items: center;
-		padding: 10px 12px;
-		color: #111827;
-		text-decoration: none;
-		transition: color 0.2s;
-	}
-
-	#links a:hover {
-		color: rgb(78, 80, 86);
-	}
-
-	#links a svg {
-		height: 1em;
-		margin-left: 8px;
-	}
-
-	#links a.button {
-		color: white;
-		background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
-		box-shadow:
-			inset 0 0 0 1px rgba(255, 255, 255, 0.12),
-			inset 0 -2px 0 rgba(0, 0, 0, 0.24);
-		border-radius: 10px;
-	}
-
-	#links a.button:hover {
-		color: rgb(230, 230, 230);
-		box-shadow: none;
-	}
-
-	pre {
-		font-family:
-			ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono',
-			monospace;
-		font-weight: normal;
-		background: linear-gradient(14deg, #d83333 0%, #f041ff 100%);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-clip: text;
-		margin: 0;
-	}
-
-	h2 {
-		margin: 0 0 1em;
-		font-weight: normal;
-		color: #111827;
-		font-size: 20px;
-	}
-
-	p {
-		color: #4b5563;
-		font-size: 16px;
-		line-height: 24px;
-		letter-spacing: -0.006em;
-		margin: 0;
-	}
-
-	code {
-		display: inline-block;
-		background:
-			linear-gradient(66.77deg, #f3cddd 0%, #f5cee7 100%) padding-box,
-			linear-gradient(155deg, #d83333 0%, #f041ff 18%, #f5cee7 45%) border-box;
-		border-radius: 8px;
-		border: 1px solid transparent;
-		padding: 6px 8px;
-	}
-
-	.box {
-		padding: 16px;
-		background: rgba(255, 255, 255, 1);
-		border-radius: 16px;
-		border: 1px solid white;
-	}
-
-	#news {
-		position: absolute;
-		bottom: 16px;
-		right: 16px;
-		max-width: 300px;
-		text-decoration: none;
-		transition: background 0.2s;
-		backdrop-filter: blur(50px);
-	}
-
-	#news:hover {
-		background: rgba(255, 255, 255, 0.55);
-	}
-
-	@media screen and (max-height: 368px) {
-		#news {
-			display: none;
-		}
-	}
-
-	@media screen and (max-width: 768px) {
-		#container {
-			display: flex;
-			flex-direction: column;
-		}
-
-		#hero {
-			display: block;
-			padding-top: 10%;
-		}
-
-		#links {
-			flex-wrap: wrap;
-		}
-
-		#links a.button {
-			padding: 14px 18px;
-		}
-
-		#news {
-			right: 16px;
-			left: 16px;
-			bottom: 2.5rem;
-			max-width: 100%;
-		}
-
-		h1 {
-			line-height: 1.5;
-		}
-	}
+    .on-top {
+        z-index: 10;
+    }
 </style>
+
+<script>
+    const cards = document.querySelector('#cards');
+    const card = document.querySelector('#last-card');
+    const image1 = document.querySelector('#swap-image-1');
+    const image2 = document.querySelector('#swap-image-2');
+
+    const cardObserver = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                console.debug('intersecting');
+                image1?.classList.add('is-not-visible');
+                image2?.classList.add('is-visible');
+                cards?.classList.add('on-top');
+            } else {
+                image1?.classList.remove('is-not-visible');
+                image2?.classList.remove('is-visible');
+                cards?.classList.remove('on-top');
+            }
+        });
+    }, {
+        threshold: 0.1,
+        rootMargin: '0px 0px -50% 0px'
+    });
+
+    if (card) {
+        cardObserver.observe(card);
+    }
+</script>
+
