--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -7,7 +7,7 @@ import Logo from "./Logo.astro";
         <main class="flex flex-col sm:items-center h-full relative max-sm:px-4 sm:max-h-[var(--max-height)] sm:min-h-fit">
             <header class="header py-6 sm:py-8 sm:px-20 flex items-center justify-between w-full relative">
                 <Logo/>
-                <div class="hidden sm:block text-foreground-soft text-2xl">Stay tuned on <a href="#"
+                <div class="hidden sm:block text-foreground-soft text-2xl">Stay tuned on <a href="https://www.linkedin.com/company/procommento/?viewAsMember=true" target="_blank"
                                                                                             class="text-primary underline ">LinkedIn</a>
                 </div>
             </header>
