Open links in a new tab

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -83,7 +83,7 @@ import Logo from "./Logo.astro";
                          id="head"
                          class="wide absolute max-w-none w-[600px] bottom-0 left-1/2 -translate-x-1/2"/>
                 </picture>
-                <a href="https://procommen.to"
+                <a href="https://procommen.to" target="_blank"
                    class="flex flex-col items-center gap-4 max-w-[230px] text-center mx-auto relative app-link z-10">
                     <span class="text-2xl font-extrabold relative">Try now</span>
                     <span class="text-xl relative">2 day trial, no credit card required</span>
