--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -74,12 +74,12 @@ import Logo from "./Logo.astro";
                     id="last-card"
                 >
                     <div class="flex items-center justify-between text-3xl">
-                        🚀<span class="text-foreground-soft text-xl">soon</span>
+                        🔥<span class="text-foreground-soft text-xl">soon</span>
                     </div>
                     <div>
-                        <p class="font-bold">Scale growth</p>
+                        <p class="font-bold">Get hot leads</p>
                         <p class="text-foreground-soft text-xl">
-                            With autoposting agent that never sleeps
+                            Track performance of your comments and see what drives replies & views
                         </p>
                     </div>
                     <svg
@@ -130,7 +130,7 @@ import Logo from "./Logo.astro";
                     <span class="text-2xl font-extrabold relative">Try now</span
                     >
                     <span class="text-xl relative"
-                        >2 day trial, no credit card required</span
+                        >5 day trial, no credit card required</span
                     >
                 </a>
                 <div
