Update card text

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -79,7 +79,7 @@ import Logo from "./Logo.astro";
                     <div>
                         <p class="font-bold">Get hot leads</p>
                         <p class="text-foreground-soft text-xl">
-                            Track performance of your comments and see what drives replies & views
+                            Convert conversations into clients
                         </p>
                     </div>
                     <svg
