--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,17 +1,22 @@
+---
+import PostHog from "../components/posthog.astro";
+---
+
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="icon" href="/favicon.ico" sizes="32x32">
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/favicon.png">
-    <meta name="generator" content={Astro.generator}/>
-    <title>ProCommento</title>
-</head>
-<body class="bg-main relative overflow-auto">
-<slot/>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" href="/favicon.ico" sizes="32x32" />
+        <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+        <link rel="apple-touch-icon" href="/favicon.png" />
+        <meta name="generator" content={Astro.generator} />
+        <title>ProCommento</title>
+        <PostHog />
+    </head>
+    <body class="bg-main relative overflow-auto">
+        <slot />
+    </body>
 </html>
 
 <style>
@@ -20,7 +25,7 @@
         margin: 0;
         width: 100%;
         height: 100%;
-        background-image: url('/Bg.svg');
+        background-image: url("/Bg.svg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
