--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -353,7 +353,9 @@ import Logo from "./Logo.astro";
     }
 
     .head-hover-gradient {
-        background: radial-gradient(#2e2eff 37%, rgba(67, 67, 255, 0) 100%);
+        /*background: radial-gradient(#2e2eff 37%, rgba(67, 67, 255, 0) 100%);*/
+        box-shadow: 0px 0px 100px 20px #2e2eff88;
+        background: radial-gradient(#2e2eff88 37%, #4343ff00);
         opacity: 0;
         transition: opacity 0.2s ease-in;
     }
