Update LinkedIn link with correct company URL

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -324,8 +324,9 @@ import Logo from "./Logo.astro";
             <div
                 class="sm:hidden text-foreground-soft text-2xl pb-10 pt-32 relative text-center"
             >
-                Stay tuned on <a href="#" class="text-primary underline"
-                    >LinkedIn</a
+                Stay tuned on <a
+                    href="https://www.linkedin.com/company/procommento/?viewAsMember=true"
+                    class="text-primary underline">LinkedIn</a
                 >
             </div>
         </main>
