Add target="_blank" to LinkedIn link in Welcome component

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -326,6 +326,7 @@ import Logo from "./Logo.astro";
             >
                 Stay tuned on <a
                     href="https://www.linkedin.com/company/procommento/?viewAsMember=true"
+                    target="_blank"
                     class="text-primary underline">LinkedIn</a
                 >
             </div>
