feat: make the last card the same white

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -70,7 +70,7 @@ import Logo from "./Logo.astro";
                     </div>
                 </div>
                 <div
-                    class="text-xl sm:w-[268px] gap-3 flex flex-col rounded-card p-6 sm:rotate-[-12.49deg] relative shrink-0"
+                    class="text-xl sm:w-[268px] gap-3 flex flex-col bg-card text-foreground-inverted rounded-card p-6 sm:rotate-[-12.49deg] card-shadow shrink-0"
                     id="last-card"
                 >
                     <div class="flex items-center justify-between text-3xl">
@@ -78,27 +78,10 @@ import Logo from "./Logo.astro";
                     </div>
                     <div>
                         <p class="font-bold">Get hot leads</p>
-                        <p class="text-foreground-soft text-xl">
+                        <p class="text-foreground-soft-inverted text-xl">
                             Convert conversations into clients
                         </p>
                     </div>
-                    <svg
-                        viewBox="0 0 300 233"
-                        class="absolute left-0 top-0 w-full h-full"
-                        preserveAspectRatio="none"
-                    >
-                        <rect
-                            x="1"
-                            y="1"
-                            width="298"
-                            height="231"
-                            rx="20"
-                            ry="20"
-                            class="fill-none stroke-foreground-soft"
-                            stroke-width="1"
-                            stroke-dasharray="8 8"
-                            vector-effect="non-scaling-stroke"></rect>
-                    </svg>
                 </div>
             </div>
             <div
