--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -113,7 +113,7 @@ import Logo from "./Logo.astro";
                     <span class="text-2xl font-extrabold relative">Try now</span
                     >
                     <span class="text-xl relative"
-                        >5 day trial, no credit card required</span
+                        >5-day trial, no credit card required</span
                     >
                 </a>
                 <div
