--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,12 +6,25 @@ import PostHog from "../components/posthog.astro";
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <title>ProCommento</title>
+        <meta name="description" content="Procommento is your CRM for LinkedIn comments — track, organize, and analyze engagement to grow your network, build trust, and turn conversations into opportunities.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="/favicon.ico" sizes="32x32" />
         <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
         <link rel="apple-touch-icon" href="/favicon.png" />
+        <meta property="og:title" content="Procommento – Write better LinkedIn comments and get more leads"/>
+        <meta property="og:description"
+        content="Procommento is your CRM for LinkedIn comments — track, organize, and analyze engagement to grow your network, build trust, and turn conversations into opportunities."/>
+        <meta property="og:image" content="https://procommento.com/og-image.png"/>
+        <meta property="og:url" content="https://procommento.com"/>
+        <meta property="og:type" content="website"/>
+
+        <meta name="twitter:card" content="summary_large_image"/>
+        <meta name="twitter:title" content="Procommento – Write better LinkedIn comments and get more leads"/>
+        <meta name="twitter:description"
+        content="Procommento is your CRM for LinkedIn comments — track, organize, and analyze engagement to grow your network, build trust, and turn conversations into opportunities."/>
+        <meta name="twitter:image" content="https://procommento.com/og-image.png"/>
         <meta name="generator" content={Astro.generator} />
-        <title>ProCommento</title>
         <PostHog />
     </head>
     <body class="bg-main relative overflow-auto">
