Fix scrolling issue on Firefox

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -7,7 +7,7 @@ import Underline from "../assets/Underline.svg";
     id="container"
     class="root h-full text-foreground overflow-auto mx-auto max-w-8xl"
 >
-    <div class="h-full relative sm:overflow-hidden sm:min-h-fit">
+    <div class="h-full relative sm:min-h-fit">
         <!-- Hero -->
         <section
             id="hero"
